<resources>
    <string name="app_name" translatable="false">Video Downloader - Video Saver</string>
    <string name="string_this_action_can_contain_ads">This action can contain ads</string>
    <string name="string_loading">Loading (%s%%)...</string>
    <string name="string_languages">Languages</string>
    <string name="string_please_select_language">Please select language</string>
    <string name="string_next">Next</string>
    <string name="string_title_intro_1">Download Anywhere</string>
    <string name="string_des_intro_1">Effortlessly save videos from all your favorite websites</string>
    <string name="string_title_intro_2">Easy Downloads</string>
    <string name="string_des_intro_2">Quickly and conveniently download videos with just one tap</string>
    <string name="string_title_intro_3">Private Folder</string>
    <string name="string_des_intro_3">Securely store and protect all your downloaded files privately</string>
    <string name="string_title_intro_4">Bookmark Manager</string>
    <string name="string_des_intro_4">Easily organize and access all your favorite links in one place</string>
    <string name="string_skip">Skip</string>
    <string name="string_continue">Continue</string>
    <string name="string_storage">Storage</string>
    <string name="string_permission">Permission</string>
    <string name="string_allow_per_app">Video Downloader requires permission!</string>
    <string name="string_disclaimers">Disclaimers</string>
    <string name="string_legal_use">1. Legal Use</string>
    <string name="string_content_legal_use">This application is intended for downloading content that you own or have permission to download. We are not responsible for any copyright violations that may occur while using the app. For copyright issues, please contact the content creator.</string>
    <string name="string_no_liability">2. No Liability</string>
    <string name="string_content_no_liability">We are not liable for any damages that may arise from the use of this application, including but not limited to data loss or service interruptions.</string>
    <string name="string_data_security">3. Data Security</string>
    <string name="string_content_data_security">We are committed to protecting your personal information. However, we advise against downloading content from unreliable sources.</string>
    <string name="string_limitation_of_liability">4. Limitation of Liability</string>
    <string name="string_content_limitation_of_liability">This application does not guarantee that all downloaded content will always be available or error-free. Downloading is entirely at the user\'s own risk.</string>
    <string name="string_terms_of_service">5. Terms of Service</string>
    <string name="string_content_terms_of_service">By using this application, you agree to our terms of service and privacy policy. Please read them carefully.</string>
    <string name="string_agree">Agree</string>
    <string name="string_rate">Rate</string>
    <string name="string_not_now">Not now</string>
    <string name="string_thank_for_rate">Thank you for rating the app</string>
    <string name="string_do_you_like_the_app">Do you like the app?</string>
    <string name="string_love_it">Love it</string>
    <string name="string_oh_no">Oh no!</string>
    <string name="string_poor">Poor!</string>
    <string name="string_good">Good!</string>
    <string name="string_great">Great!</string>
    <string name="string_please_feedback">Please feedback</string>
    <string name="string_stay">Stay</string>
    <string name="string_exit">Exit</string>
    <string name="exit_app">Do you want exit?</string>
    <string name="string_are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="string_browser">Browser</string>
    <string name="string_processing">Processing</string>
    <string name="string_downloaded">Downloaded</string>
    <string name="string_settings">Settings</string>
    <string name="string_download_location">Download location</string>
    <string name="string_share">Share</string>
    <string name="string_privacy_policy">Privacy Policy</string>
    <string name="string_let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="string_choose_one">Choose one</string>
    <string name="string_guide">Guide</string>
    <string name="string_step_1"><![CDATA[<b>Step 1:</b>]]> Visit the websites you want to download content from.</string>
    <string name="string_step_2"><![CDATA[<b>Step 2:</b>]]> Tap on the download button provided on the webpage and wait for the download process to complete.</string>
    <string name="string_video_downloader">Video Downloader</string>
    <string name="string_search_for_anything">Search for anything</string>
    <string name="string_bookmark">Bookmark</string>
    <string name="string_history">History</string>
    <string name="string_google">Google</string>
    <string name="string_facebook">Facebook</string>
    <string name="string_instagram">Instagram</string>
    <string name="string_tiktok">TikTok</string>
    <string name="string_vimeo">Vimeo</string>
    <string name="string_imdb">IMDb</string>
    <string name="string_dailymotion">Dailymotion</string>
    <string name="player_resolution">video resolution as in the player</string>
    <string name="string_download_successful">Download successful !!!</string>
    <string name="string_your_download_is_complete_you_can_now_access_your_file">Your download is complete. You can now access your file</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_open">Open</string>
    <string name="string_confirm_delete">Confirm Delete</string>
    <string name="string_are_you_sure_want_to_delete_photo">Are you sure want to delete photo?</string>
    <string name="string_delete">Delete</string>
    <string name="download_open_in_app">Open in App</string>
    <string name="download_watch_in_app">Watch Video</string>
    <string name="app_download_channel_id" translatable="false">download_channel_id</string>
    <string name="string_close_all">Close all</string>
    <string name="string_num_tabs">%s Tabs</string>
    <string name="string_go_see_the_sites">Go see the sites! The pages you visit will show up here !</string>
    <string name="string_you_have_not_added">You have not added any Bookmarks, select the "+" sign at the bottom of the screen to add a Bookmark.</string>
    <string name="string_clear_all_history">Clear all history</string>
    <string name="string_set_pin">Set PIN</string>
    <string name="string_enter_your_new_pin">Enter your new PIN</string>
    <string name="string_des_pin">Enhanced security with PIN codes to prevent access to sensitive content</string>
    <string name="string_forgot_password">Forgot Password</string>
    <string name="string_enter_search_name">Enter search name</string>
    <string name="string_security_question">Security Question</string>
    <string name="string_what_is_your_lucky_number">What is your lucky number?</string>
    <string name="string_enter_your_answer">Enter your answer</string>
    <string name="string_what_is_your_favourite_pet_name">What is your favourite pet name?</string>
    <string name="string_what_was_your_favorite_food_as_a_child">What was your favorite food as a child?</string>
    <string name="string_add_bookmark">Add bookmark</string>
    <string name="string_add">Add</string>
    <string name="string_name">Name</string>
    <string name="string_url">URL</string>
    <string name="string_invalid_data">Invalid data!</string>
    <string name="string_video_found">Video found</string>
    <string name="whatshould">What should we do?</string>
    <string name="dontshow">Don\'t show again</string>
    <string name="view">View</string>
    <string name="string_save">Save</string>
    <string name="string_rename">Rename</string>
    <string name="string_download_only">Download Only</string>
    <string name="string_this_video_supports_only_download">This video supports only download.</string>
    <string name="download_started">Video Download Started Successfully!!!</string>
    <string name="string_you_need_to_enable_permission_to_use_this_features">You need to enable permission to use this features</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="string_save_to_bookmarks_successfully">Save to bookmarks successfully</string>
    <string name="string_notification">Notification</string>
    <string name="settings_message_open_folder">You don\'t have any file explorer app installed on your device</string>
    <string name="video_share_message">You don\'t have any video player app installed on your device</string>
    <string name="cookies_cleared">Cookies cleared</string>
    <string name="string_paste">Paste</string>
    <string name="string_paste_link_here">Paste link here</string>
    <string name="video_rename_invalid">Invalid name. Please try again!</string>
    <string name="video_rename_exist">Video name already exists!</string>
    <string name="string_remove_from_private">Remove from Private</string>
    <string name="string_delete_from_device">Delete from Device</string>
    <string name="string_num_files">%s files</string>
    <string name="string_download_not_found">Download not found</string>
    <string name="string_no_text_in_clipboard">No text in clipboard</string>
    <string name="string_clipboard_is_empty">Clipboard is empty</string>
    <string name="string_0">0</string>
    <string name="string_1">1</string>
    <string name="string_2">2</string>
    <string name="string_3">3</string>
    <string name="string_4">4</string>
    <string name="string_5">5</string>
    <string name="string_6">6</string>
    <string name="string_7">7</string>
    <string name="string_8">8</string>
    <string name="string_9">9</string>
    <string name="string_re_enter_your_pin">Re-enter your PIN</string>
    <string name="string_re_enter_your_pin_to_confirm">Re-enter your PIN to confirm</string>
    <string name="string_password_does_not_match">Password does not match</string>
    <string name="string_please_enter_your_answer">Please enter your answer</string>
    <string name="string_your_pin_code_amp_security_question_has_been_set"><![CDATA[Your PIN code & security question has been set!]]></string>
    <string name="string_ok">OK</string>
    <string name="string_enter_your_pin">Enter your PIN</string>
    <string name="string_enter_your_pin_to_confirm">Enter your PIN to confirm</string>
    <string name="string_incorrect_security_question">Incorrect security question</string>
    <string name="string_correct_security_question">Correct security question</string>
    <string name="string_private_video">Private video</string>
    <string name="string_no_videos_downloaded">No videos downloaded</string>
    <string name="string_no_files_have_been_downloaded_yet">No files have been downloaded yet.</string>
    <string name="string_no_files_have_been_added_to_the_private_folder_yet">No files have been added to the Private folder yet.</string>
    <string name="string_move_to_private">Move to private</string>
    <string name="string_change_pin_code">Change PIN code</string>
    <string name="string_change_security_question">Change security question</string>
    <string name="string_delete_private_folder">Delete Private folder</string>
    <string name="string_num_video_selected">%s Video selected</string>
    <string name="string_num_file_selected">%s File selected</string>
    <string name="string_add_to_private">Add to private</string>
    <string name="string_go_to_browser">Go to browser</string>
    <string name="string_please_select_file">Please select file</string>
    <string name="string_open_in_new_tab">Open in new tab</string>
    <string name="string_copy_link">Copy link</string>
    <string name="string_download_image">Download image</string>
</resources>