<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/bg_dialog_rate"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_15sdp">

        <LinearLayout
            android:id="@+id/native_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:lines="2"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="2"
            android:paddingHorizontal="@dimen/_8sdp"
            android:scrollHorizontally="true"
            android:text="@string/string_your_download_is_complete_you_can_now_access_your_file"
            android:textColor="#404040"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_open_new_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/string_open_in_new_tab"
            android:textColor="#808080"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/string_share"
            android:textColor="#808080"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_copy_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/string_copy_link"
            android:textColor="#808080"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_download_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/string_download_image"
            android:textColor="#808080"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>
</LinearLayout>