<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/bg_dialog_rate"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/native_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/string_rename"
            android:textColor="#404040"
            android:textSize="@dimen/_15sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_item_turnon_stroke"
            android:backgroundTint="#EDEDED"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center|start"
            android:hint="@string/string_name"
            android:imeOptions="actionDone"
            android:paddingHorizontal="@dimen/_8sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#BFBFBF"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_exit"
                android:fontFamily="@font/sf_pro_display_regular"
                android:gravity="center"
                android:maxLines="1"
                android:paddingVertical="@dimen/_11sdp"
                android:text="@string/string_cancel"
                android:textAllCaps="false"
                android:textColor="#8C9CB3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_skip_permission"
                android:fontFamily="@font/sf_pro_display_regular"
                android:gravity="center"
                android:paddingVertical="@dimen/_11sdp"
                android:text="@string/string_save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>