<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/bg_dialog_rate"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/native_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/string_confirm_delete"
            android:textColor="#404040"
            android:textSize="@dimen/_15sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/string_are_you_sure_want_to_delete_photo"
            android:textColor="#808080"
            android:textSize="@dimen/_13sdp" />

        <ImageView
            android:id="@+id/lottie_view_icon"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/img_confirm_delete" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_exit"
                android:fontFamily="@font/sf_pro_display_regular"
                android:gravity="center"
                android:maxLines="1"
                android:paddingVertical="@dimen/_11sdp"
                android:text="@string/string_cancel"
                android:textAllCaps="false"
                android:textColor="#8C9CB3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_open"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_skip_permission"
                android:backgroundTint="#FF6666"
                android:fontFamily="@font/sf_pro_display_regular"
                android:gravity="center"
                android:paddingVertical="@dimen/_11sdp"
                android:text="@string/string_delete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>